@@ -10,6 +10,7 @@ psh
 psh.NEWS
 psh.pod
 test.pl
+lib/Psh.pm
 lib/Psh/Job.pm
 lib/Psh/Joblist.pm
 lib/Psh/Completion.pm
@@ -17,3 +18,11 @@ lib/Psh/Locale/Base.pm
 lib/Psh/Locale/Default.pm
 lib/Psh/Locale/German.pm
 lib/Psh/Parser.pm
+lib/Psh/Util.pm
+lib/Psh/Builtins.pm
+lib/Psh/OS.pm
+lib/Psh/OS/Mac.pm
+lib/Psh/OS/Unix.pm
+lib/Psh/OS/Win.pm
+t/locale.t
+t/parser.t
